# Divergence

./: Cargo.toml  readme.md  research_summary.md
crates/buffer/: Cargo.toml
crates/buffer/src/: adjacency_pool.rs  lib.rs  vector_pool.rs
crates/core/: Cargo.toml
crates/core/src/: distance.rs  encoding.rs  lib.rs  quantization.rs  types.rs
crates/engine/: Cargo.toml
crates/engine/src/: aligned.rs  dispatcher.rs  io.rs  lib.rs  pipeline.rs  runtime.rs  search.rs
crates/engine/tests/: disk_search.rs
crates/index/: Cargo.toml
crates/index/src/: graph.rs  heap.rs  hnsw.rs  lib.rs  nsw.rs  visited.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: adjacency.rs  lib.rs  meta.rs  pq_store.rs  vectors.rs  writer.rs
docs/: hnsw_impl_summary.md  implementation_plan.md  io_uring_notes.md  paper_distill_4.0.md  paper_insights.md  reference_codebases.md
tools/nvme-bench/: Cargo.toml
tools/nvme-bench/src/: main.rs
